Fix several deprecation warnings